# cmd/api/main.go
@@ -25,7 +25,6 @@ import (
 // @license.url http://www.apache.org/licenses/LICENSE-2.0.html
 // @host localhost:8080
 // @BasePath /api/v1
-// @securityDefinitions.apikey BearerAuth
 // @in header
 // @name Authorization
 func main() {
